# petl

./: .coveragerc  .flake8  .gitignore  .project  .readthedocs.yaml  .travis.yml  .travis.yml~  100krow-nofunc.xlsx  100krow.xlsx  Book-byMSExcelOnline.xlsx  CHECKLIST.txt  CODE_OF_CONDUCT.md  LICENSE.txt  README.rst  README.txt  TODO  TODO.rst  appveyor.yml  ci_requirements.txt  docker-compose.yml  optional_requirements.txt  pyproject.toml  pytest.ini  readsheet-nofunc.py  readsheet.py  release.txt  remotes_requirements.txt  repr_html.ipynb  requirements-database.txt  requirements-docs.txt  requirements-formats.txt  requirements-linting.txt  requirements-optional.txt  requirements-remote.txt  requirements-tests.txt  rtfd_requirements.txt  setup.py  test_requirements.txt  tox.ini
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: codacy-analysis.yml  codeql-analysis.yml  publish-release.yml  test-changes.yml
docs/: Makefile  acknowledgments.rst  case_study_1.rst  case_study_1.txt  changes.rst  conf.py  config.rst  contributing.rst  dbexamples.py  dbtests.py  done  examples.py  extract.rst  fluent.rst  fluent.txt  glossary.txt  index.rst  index.txt  install.rst  interactive.rst  interactive.txt  intro.rst  io.rst  iohelp.rst  load.rst  make.bat  protocol.txt  push.rst  push.txt  related_work.rst  related_work.txt  spike_cache.py  spike_interactive.py  spike_sort_buffered.py  todo.txt  transform.rst  util.rst
docs/examples/: fluent.py  interactive.py
docstage/: index.html
docstage/0.10/: case_study_1.html  fluent.html  genindex.html  index.html  interactive.html  objects.inv  push.html  py-modindex.html  related_work.html  search.html  searchindex.js
docstage/0.10.2/: case_study_1.html  fluent.html  genindex.html  index.html  interactive.html  objects.inv  push.html  py-modindex.html  related_work.html  search.html  searchindex.js
docstage/0.11/: case_study_1.html  fluent.html  genindex.html  index.html  interactive.html  objects.inv  push.html  py-modindex.html  related_work.html  search.html  searchindex.js
docstage/0.11.1/: case_study_1.html  fluent.html  genindex.html  index.html  interactive.html  objects.inv  push.html  py-modindex.html  related_work.html  search.html  searchindex.js
docstage/0.2/: genindex.html  index.html  objects.inv  py-modindex.html  recipes.html  related_work.html  search.html  searchindex.js  todo.html
docstage/0.3/: genindex.html  index.html  objects.inv  py-modindex.html  recipes.html  related_work.html  search.html  searchindex.js  todo.html
docstage/0.4/: genindex.html  index.html  objects.inv  py-modindex.html  recipes.html  (+4 more)
examples/: comparison.py  fluent.py  interactive.py  intro.py
fixture/: example1.csv  example2.csv  example3.csv  example4.csv  example5.csv
notes/: .gitignore  20140424_example.ipynb  20140424_example.py  20141022_example.ipynb  20141110_example.ipynb  20150331 split null.ipynb  case_study_1.ipynb  issue_219.ipynb  issue_219.py  issue_256.py
petl/: __init__.py  base.py  comparison.py  compat.py  config.py  errors.py  fluent.py  interactive.py  push.py  util.py
src/: example.xml  example1.csv  example1.json  example2.xml  example3.xml  example_cat.py  example_look.py  example_profiling.py  prettytable.py
tests/: test_standardize.py
tmp/: README
(+399 files in other folders)
